YTI-889 For some users it was difficult to detect the opening of a dropdown due to invisible borders - fixed.

--- a/theme/_main.scss
+++ b/theme/_main.scss
@@ -286,6 +286,7 @@ ul.nav-tabs {
 .dropdown-menu {
   max-height: 400px;
   overflow-y: auto;
+  border: 1px solid $black;
 }
 
 .dropdown-toggle {
